# testing_in_embedded_with_rust

./: Cargo.toml  README.md  mise.toml
application/: Cargo.toml
application/src/: lib.rs
article/: article_en.md  article_ua.md
bme280-driver/: Cargo.toml
bme280-driver/src/: baro.rs  lib.rs
integration-tests/: Cargo.toml
integration-tests/tests/: filtered_sensor_tests.rs
stm32-target/: Cargo.toml  build.rs  memory.x
stm32-target/.cargo/: config.toml
stm32-target/src/: main.rs
stm32-target/tests/: initialization_tests.rs
