[package]
name = "stm32-target"
version = "0.1.0"
edition = "2024"

[dependencies]
bme280-driver = { path = "../bme280-driver" }
application = { path = "../application" }

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0"
stm32f4xx-hal = { version = "0.23.0", features = ["stm32f446", "defmt"] }

defmt-rtt = "1.2.0"
defmt = "1.1.0"

critical-section = "1.2.0"

static_cell = "2.1.1"

[dev-dependencies]
embedded-test = { version = "0.7.1", features = ["defmt"] }

[[test]]
name = "initialization_tests"
harness = false

[[bin]]
name = "stm32-target"
test = false
